[package]
name = "qinetic"
version = "0.1.2"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "free, cross-platform, open-source simple game engine, designed to be fast, simple and modular"
documentation = "https://docs.rs/qinetic"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["gamedev", "graphics", "game", "engine", "qinetic"]
categories = ["game-engines"]

[workspace]
exclude = [
	"benches",
	"tests",
]
members = [
	"crates/*",
]

[features]
default = [
	"animation",
	"audio",
	"physics",
	"render",
]

# force dynamic linking, which improves iterative compile times.
dynamic = ["qinetic_dylib"]

# Optional Qinetic crates
animation = ["qinetic_internal/qinetic_animation"]
audio = ["qinetic_internal/qinetic_audio"]
network = ["qinetic_internal/qinetic_network"]
physics = ["qinetic_internal/qinetic_physics"]
render = ["qinetic_internal/qinetic_render"]
ui = ["qinetic_internal/qinetic_ui"]

[dependencies]
qinetic_dylib = { path = "crates/dylib", version = "0.*", default-features = false, optional = true}
qinetic_internal = { path = "crates/internal", version = "0.*", default-features = false}

[package.metadata.docs.rs]
all-features = true
