[package]
name = "qinetic"
version = "0.2.1"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "free, cross-platform, open-source simple game engine, designed to be fast, simple and modular"
documentation = "https://docs.rs/qinetic"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["gamedev", "graphics", "game", "engine", "qinetic"]
categories = ["game-engines"]

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = 'abort'

[workspace]
exclude = [
	"benches",
	"tests",
]
members = [
	"crates/*",
]

[features]
default = [
	"animation",
	"audio",
	"physics",
	"render",
	"pbr",
	"log",
	"input",
	"winit",
	"wayland",
]

# Force dynamic linking, which improves iterative compile times.
# Avaliable only in `dev` profile.
dynamic = ["qinetic_dylib"]

# Optional Qinetic crates
ai = ["qinetic_internal/qinetic_ai"]
animation = ["qinetic_internal/qinetic_animation"]
audio = ["qinetic_internal/qinetic_audio"]
log = ["qinetic_internal/qinetic_log"]
network = ["qinetic_internal/qinetic_network"]
physics = ["qinetic_internal/qinetic_physics"]
render = ["qinetic_internal/qinetic_render"]
pbr = ["qinetic_internal/qinetic_pbr"]
ui = ["qinetic_internal/qinetic_ui"]
vr = ["qinetic_internal/qinetic_vr"]
ar = ["qinetic_internal/qinetic_ar"]
input = ["qinetic_internal/input"]
winit = ["qinetic_internal/qinetic_winit"]

# Window backend.
wayland = ["qinetic_internal/wayland"]
x11 = ["qinetic_internal/x11"]

[dependencies]
# Qinetic.
qinetic_internal = { path = "crates/internal", version = "0.*", default-features = false}

# Qinetic option.
qinetic_dylib = { path = "crates/dylib", version = "0.*", default-features = false, optional = true}
