[package]
name = "qinetic_app"
version = "0.1.5"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing application functionality"
documentation = "https://docs.rs/qinetic_app"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[dependencies]
qinetic_app_macros = { path = "../app_macros", version = "0.*" }

qinetic_ecs = { path = "../ecs", version = "0.*" }
