[package]
name = "qinetic_app_macros"
version = "0.1.0"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing application macros"
documentation = "https://docs.rs/qinetic_app_macros"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[lib]
proc-macro = true

[dependencies]
# Qinetic macros.
qinetic_utils = { path = "../utils", version = "0.*" }

# Other.
syn = "1.*"
quote = "1.*"
