[package]
name = "qinetic_core"
version = "0.1.4"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing core functionality"
documentation = "https://docs.rs/qinetic_core"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]



[dependencies]
# Qinetic.
qinetic_app = { path = "../app", version = "0.*" }
qinetic_ecs = { path = "../ecs", version = "0.*" }
qinetic_utils = { path = "../utils", version = "0.*" }