[package]
name = "qinetic_dylib"
version = "0.1.3"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic force to be dynamically linked"
documentation = "https://docs.rs/qinetic_dylib"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[lib]
crate-type = ["dylib"]

[dependencies]
# Qinetic.
qinetic_internal = { path = "../internal", version = "0.*" }
