[package]
name = "qinetic_ecs"
version = "0.1.2"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing entity-component-system functionality"
documentation = "https://docs.rs/qinetic_ecs"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[dependencies]
qinetic_ecs_macros = { path = "../ecs_macros", version = "0.*" }
