[package]
name = "qinetic_input"
version = "0.1.3"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing input functionality"
documentation = "https://docs.rs/qinetic_input"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[dependencies]
# Qinetic.
qinetic_app = { path = "../app", version = "0.*" }
qinetic_ecs = { path = "../ecs", version = "0.*" }
qinetic_core = { path = "../core", version = "0.*" }
qinetic_utils = { path = "../utils", version = "0.*" }

derive_builder = "0.12.*"