[package]
name = "qinetic_internal"
version = "0.1.2"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, facilitating optional dynamic linking"
documentation = "https://docs.rs/qinetic_internal"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[dependencies]
qinetic_animation = { path = "../animation", optional = true, version = "0.1.0" }
qinetic_app = { path = "../app", version = "0.1.0" }
qinetic_asset = { path = "../asset", version = "0.1.0" }
qinetic_audio = { path = "../audio", optional = true, version = "0.1.0" }
qinetic_core = { path = "../core", version = "0.1.1" }
qinetic_ecs = { path = "../ecs", version = "0.1.0" }
qinetic_input = { path = "../input", version = "0.1.0" }
qinetic_log = { path = "../log", version = "0.1.0" }
qinetic_math = { path = "../math", version = "0.1.2" }
qinetic_network = { path = "../network", optional = true, version = "0.1.0" }
qinetic_physics = { path = "../physics", optional = true, version = "0.1.0" }
qinetic_render = { path = "../render", optional = true, version = "0.1.0" }
qinetic_ui = { path = "../ui", optional = true, version = "0.1.0" }
qinetic_window = { path = "../window", version = "0.1.0" }
