[package]
name = "qinetic_internal"
version = "0.2.0"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, facilitating optional dynamic linking"
documentation = "https://docs.rs/qinetic_internal"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[toolchain]
channel = "nightly"

[features]
input = ["qinetic_winit/input", "qinetic_input"]
wayland = ["qinetic_winit/wayland"]
x11 = ["qinetic_winit/x11"]

[dependencies]
# Qinetic.
qinetic_app = { path = "../app", version = "0.*" }
qinetic_asset = { path = "../asset", version = "0.*" }
qinetic_core = { path = "../core", version = "0.*" }
qinetic_ecs = { path = "../ecs", version = "0.*" }
qinetic_math = { path = "../math", version = "0.*" }
qinetic_utils = { path = "../utils", version = "0.*"}

# Qinetic option.
qinetic_ai = { path = "../ai", optional = true, version = "0.*" }
qinetic_animation = { path = "../animation", optional = true, version = "0.*" }
qinetic_audio = { path = "../audio", optional = true, version = "0.*" }
qinetic_log = { path = "../log", optional = true, version = "0.*" }
qinetic_network = { path = "../network", optional = true, version = "0.*" }
qinetic_physics = { path = "../physics", optional = true, version = "0.*" }
qinetic_render = { path = "../render", optional = true, version = "0.*" }
qinetic_pbr = { path = "../pbr", optional = true, version = "0.*" }
qinetic_ui = { path = "../ui", optional = true, version = "0.*" }
qinetic_ar = { path = "../ar", optional = true, version = "0.*" }
qinetic_vr = { path = "../vr", optional = true, version = "0.*" }
qinetic_input = { path = "../input", optional = true, version = "0.*" }
qinetic_winit = { path = "../winit", optional = true, version = "0.*" }
qinetic_window = { path = "../window", optional = true, version = "0.*" }