[package]
name = "qinetic_log"
version = "0.1.0"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing log functionality"
documentation = "https://docs.rs/qinetic_log"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[dependencies]
qinetic_app = { path = "../app", version = "0.1.0" }
