[package]
name = "qinetic_math"
version = "0.6.0"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing math functionality"
documentation = "https://docs.rs/qinetic_math"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[dependencies]
# Qinetic.
qinetic_app = { path = "../app", version = "0.*" }
qinetic_ecs = { path = "../ecs", version = "0.*" }
qinetic_core = { path = "../core", version = "0.*" }
qinetic_utils = { path = "../utils", version = "0.*" }

# Other.
num-traits = "0.2"
derive_builder = "0.12.*"
