[package]
name = "qinetic_physics"
version = "0.1.1"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing physics functionality"
documentation = "https://docs.rs/qinetic_physics"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[dependencies]
qinetic_app = { path = "../app", version = "0.*" }
