[package]
name = "qinetic_ui"
version = "0.1.3"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing user-interface functionality"
documentation = "https://docs.rs/qinetic_ui"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]



[dependencies]
# Qinetic.
qinetic_app = { path = "../app", version = "0.*" }
qinetic_ecs = { path = "../ecs", version = "0.* "}
qinetic_core = { path = "../core", version = "0.*" }
qinetic_math = { path = "../math", version = "0.*" }
qinetic_utils = { path = "../utils", version = "0.*" }