[package]
name = "qinetic_utils"
version = "0.1.0"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing utils"
documentation = "https://docs.rs/qinetic_utils"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[dependencies]
# Qinetic macros.
qinetic_utils_macros = { path = "../utils_macros", version = "0.*" }
