[package]
name = "qinetic_utils"
version = "0.1.1"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing utils"
documentation = "https://docs.rs/qinetic_utils"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]



[dependencies]
# Other.
getset = "0.1.*"
derive_builder = "0.12.*"
derive_more = "0.99.*"
derive-new = "0.5.*"
smart-default = "0.6.*"
downcast-rs = "1.2.*"
static_assertions = "1.1.*"
dyn-clone = "1.0.*"
derivative = "2.2.*"
thiserror = "1.0.*"
syn = "1.*"
quote = "1.*"
toml = "0.5.*"
rgb = "0.8.*"