[package]
name = "qinetic_window"
version = "0.2.0"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, containing window functionality"
documentation = "https://docs.rs/qinetic_window"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]

[toolchain]
channel = "nightly"

[features]
input = ["qinetic_input"]

[dependencies]
# Qinetic.
qinetic_app = { path = "../app", version = "0.*" }
qinetic_ecs = { path = "../ecs", version = "0.* " }
qinetic_core = { path = "../core", version = "0.* " }
qinetic_utils = { path = "../utils", version = "0.*" }

# Qinetic optional.
qinetic_input = { path = "../input", version = "0.*", optional = true }