[package]
name = "qinetic_winit"
version = "0.1.0"
authors = [
	"Vladislav Loginov <vl.mr.freeman@gmail.com>",
]
edition = "2021"
description = "crate for Qinetic, facilitating optional dynamic linking"
documentation = "https://docs.rs/qinetic_internal"
readme = "README.md"
repository = "https://github.com/vl-mr-freeman/qinetic"
license = "MIT"
keywords = ["qinetic"]



[features]
input = ["qinetic_input"]
wayland = ["winit/wayland"]
x11 = ["winit/x11"]

[dependencies]
# Qinetic.
qinetic_app = { path = "../app", version = "0.*" }
qinetic_ecs = { path = "../ecs", version = "0.*" }
qinetic_utils = { path = "../utils", version = "0.*" }
qinetic_core = { path = "../core", version = "0.*" }
qinetic_window = { path = "../window", version = "0.*" }

# Qinetic optional.
qinetic_input = { path = "../input", version = "0.*", optional = true }

# Other.
winit = {version = "0.27", default-features = false }